# MonitorX

./: .gitignore  CMakeLists.txt
config/: config.json
src/app/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  IConfigManager.hpp
src/di/: CMakeLists.txt  DependencyInjection.cpp  DependencyInjection.hpp
src/models/: CMakeLists.txt  FileEntryModel.cpp  FileEntryModel.hpp
src/services/: CMakeLists.txt  FileMonitorService.cpp  FileMonitorService.hpp  IFileMonitorService.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/utils/: BackupManager.cpp  BackupManager.hpp  CMakeLists.txt  HashManager.cpp  HashManager.hpp  IBackupManager.hpp  IHashManager.hpp  ILogger.hpp  LogManager.cpp  LogManager.hpp
src/viewmodels/: CMakeLists.txt  IMonitorViewModel.hpp  MonitorViewModel.cpp  MonitorViewModel.hpp
